<?xml version="1.0" encoding="utf-8"?><!--
    This vertical linear layout contains all the views in the AddTaskActivity code.
    This includes an EditText to adtaskEntrytask description, and buttons to select a priority
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_task"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/edit_task_title"
        android:maxLength="60"
        android:maxLines="1"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_task"
        tools:layout_editor_absoluteX="37dp" />

    <EditText
        android:id="@+id/et_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/edit_task_description"
        android:maxLines="15"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="@+id/et_task_title"
        app:layout_constraintTop_toBottomOf="@+id/et_task_title" />


    <TextView
        android:id="@+id/textView3"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/priority_string"
        android:textColor="@android:color/primary_text_light"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/et_task_description"
        app:layout_constraintTop_toBottomOf="@+id/et_task_description" />

    <!-- RadioGroup for visible selection of a priority -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="16dp">

        <RadioButton
            android:id="@+id/radButton1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/materialRed"
            android:checked="true"
            android:text="@string/high_priority"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/materialOrange"
            android:text="@string/med_priority"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/materialYellow"
            android:text="@string/low_priority"
            android:theme="@style/WhiteRadioButton" />

    </RadioGroup>

    <!-- Add button -->
    <Button
        android:id="@+id/saveButton"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_button"
        android:textColor="@android:color/primary_text_dark"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>